--- a/css/estilo.css
+++ b/css/estilo.css
@@ -101,8 +101,6 @@ main div h1 {
 picture {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 3rem;
+    gap: 20px;
     justify-content: space-around;
-    margin-left: 3rem;
-    margin-right: 3rem;
 }
