--- a/css/pedido.css
+++ b/css/pedido.css
@@ -40,3 +40,12 @@ button {
     padding: 9px;
     cursor: pointer;
 }
+
+select {
+    padding: 15px;
+    margin: 1rem;
+    border-radius: 5px;
+    border-color: var(--primary);
+    border-width: 2px;
+}
+
