--- a/css/estilo.css
+++ b/css/estilo.css
@@ -132,8 +132,12 @@ h6 {
     margin-right: 8px;
 }
 
-.suc {
-    display: block;
-    justify-content: center;
-    margin-left: 0;
+.seta {
+    color: var(--secondary);
+    font-size: 1rem;
+}
+
+.seta:hover{
+    color: var(--primary);
+    font-weight: bold;
 }
